# raytracer

./: Cargo.toml  README.md  typos.toml
crates/raytracer-cpu-renderer/: Cargo.toml
crates/raytracer-cpu-renderer/src/: brdf.rs  brdfs.rs  lib.rs  renderer.rs
crates/raytracer-cpu-renderer/src/brdfs/: disney.rs  lambertian.rs
crates/raytracer-primitives/: Cargo.toml
crates/raytracer-primitives/src/: box.rs  lib.rs  plain.rs  sphere.rs
src/: aabb.rs  brdf.rs  brdfs.rs  camera.rs  cli.rs  hit.rs  light.rs  lights.rs  main.rs  material.rs  object.rs  objects.rs  ray.rs  scene.rs
src/brdfs/: disney.rs  lambertian.rs
src/commands/: render.rs
src/lights/: directional_light.rs  spot_light.rs
src/objects/: box.rs  plain.rs  sphere.rs
src/scenes/: cornell_box.rs
