[package]
name = "raytracer"
description = "a simple raytracer written in Rust"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
clap = "4"
glam = { version = "0.30", features = ["fast-math"] }
png = "0.17"
rand = "0.9"
rayon = "1"
raytracer-core = { path = "crates/raytracer-core" }
raytracer-cpu-renderer = { path = "crates/raytracer-cpu-renderer" }
raytracer-primitives = { path = "crates/raytracer-primitives" }

[dependencies]
clap = { workspace = true, features = ["derive"] }
glam.workspace = true
png.workspace = true
rand.workspace = true
rayon.workspace = true
raytracer-core.workspace = true
raytracer-cpu-renderer.workspace = true
raytracer-primitives.workspace = true
